--- a/src/template.html
+++ b/src/template.html
@@ -3,9 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JS Form Validation</title>
 </head>
 <body>
-    
+    <form>
+        <div>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email">
+            <span class="error" aria-live="polite"></span>
+        </div>
+        <div>
+            <label for="country">Country:</label>
+            <input type="text" id="country" name="country">
+            <span class="error" aria-live="polite"></span>
+        </div>
+        <div>
+            <label for="post-code">Post Code:</label>
+            <input type="text" name="pCode" id="post-code">
+            <span class="error" aria-live="polite"></span>
+        </div>
+        <div>
+            <label for="pwd">Password:</label>
+            <input type="password" name="pwd" id="pwd">
+            <span class="error" aria-live="polite"></span>
+        </div>
+        <div>
+            <label for="confirmPwd">Confirm Password:</label>
+            <input type="password" name="confirmPwd" id="confirmPwd">
+            <span class="error" aria-live="polite"></span>
+        </div>
+    </form>
 </body>
 </html>
