--- a/src/template.html
+++ b/src/template.html
@@ -6,15 +6,32 @@
     <title>JS Form Validation</title>
 </head>
 <body>
-    <form>
+    <form novalidate>
         <div>
             <label for="email">Email:</label>
-            <input type="email" id="email" name="email">
+            <input type="email" id="email" name="email" required minlength="8">
             <span class="error" aria-live="polite"></span>
         </div>
         <div>
             <label for="country">Country:</label>
-            <input type="text" id="country" name="country">
+            <select name="country" id="country" required>
+                <option value="">--Please choose an option--</option>
+                <optgroup label="Europe">
+                    <option value="uk">UK</option>
+                    <option value="france">France</option>
+                    <option value="germany">Germany</option>
+                    <option value="norway">Norway</option>
+                    <option value="iceland">Iceland</option>
+                </optgroup>
+                <optgroup label="Americas">
+                    <option value="us">US</option>
+                    <option value="canada">Canada</option>
+                    <option value="mexico">Mexico</option>
+                    <option value="guatemala">Guatemala</option>
+                    <option value="honduras">Honduras</option>
+                    <option value="elSalvador">El Salvador</option>
+                </optgroup>
+            </select>
             <span class="error" aria-live="polite"></span>
         </div>
         <div>
@@ -24,7 +41,7 @@
         </div>
         <div>
             <label for="pwd">Password:</label>
-            <input type="password" name="pwd" id="pwd">
+            <input type="password" name="pwd" id="pwd" required minlength="8">
             <span class="error" aria-live="polite"></span>
         </div>
         <div>
